# Automerge.Windows

./: .gitattributes  .gitignore  Automerge.Windows.sln  BUILDING.md  CMakeLists.txt  README.md  build.ps1  check-yaml.js  fix-yaml.ps1  remove-bom.ps1
.github/workflows/: ci.yml  release.yml
cmake/: toolchain-arm64-mingw.cmake
cpp-wrapper/: CMakeLists.txt
cpp-wrapper/include/: automerge.hpp
cpp-wrapper/include/automerge/: Document.hpp  Error.hpp  SyncState.hpp
cpp-wrapper/src/: Document.cpp  SyncState.cpp
csharp-wrapper/: AutomergeUrl.cs  AutomergeWindows.csproj  DocHandle.cs  Document.cs  Extensions.cs  FileStorageAdapter.cs  INetworkAdapter.cs  IStorageAdapter.cs  NativeMethods.cs  Repo.cs  RepoSyncSession.cs  SyncState.cs  WebSocketNetworkAdapter.cs
ports/automerge-windows/: automerge-windows-config.cmake  portfile.cmake  usage  vcpkg.json
rust-core/: Cargo.toml  build.rs  cbindgen.toml  rust-toolchain.toml
rust-core/.cargo/: config.toml
rust-core/include/: automerge_core.h
rust-core/src/: doc.rs  error.rs  lib.rs  sync_state.rs
rust-core/tests/: c_api_tests.rs
tests/cpp/: CMakeLists.txt  test_changes.cpp  test_document.cpp  test_sync.cpp
tests/csharp/: AutomergeTests.csproj  ChangesAndMergeTests.cs  DocumentTests.cs  NewApiTests.cs  RepoLayerTests.cs  RepoSyncSessionTests.cs  SmokeTests.cs  SyncTests.cs
tests/winrt/: AutomergeWinRTTests.csproj  WinRTDocumentTests.cs  WinRTSyncTests.cs
tests/winrt/Generated Files/: Automerge.Windows.cs  cswinrt.rsp  cswinrt_internal.rsp
winrt-component/: Automerge.Windows.WinRT.nuspec  Automerge.Windows.idl  Cbor.hpp  Document.cpp  Document.h  Helpers.hpp  RepoSyncSession.cpp  RepoSyncSession.h  SyncState.cpp  SyncState.h  build-winrt.ps1  dll_exports.cpp  pch.cpp  pch.h  winrt-component.vcxproj
