[package]
name = "automerge-core"
version = "0.1.0"
edition = "2021"
description = "Native Windows Automerge bindings — C ABI layer"
license = "MIT"

[lib]
name = "automerge_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
automerge = "0.5"
serde_json = { version = "1", features = ["std"] }
serde = { version = "1", features = ["derive"] }

# cbindgen removed - C header is maintained manually in include/automerge_core.h

[dev-dependencies]
automerge = "0.5"
